# CPSC-455_Julia_Sets_Final

./: CMakeLists.txt
src/: Render.cpp  Render.hpp  main.cpp
src/utils/: Gradients.hpp  JuliaSet.cpp  JuliaSet.hpp
